Fix saga-orchestrator compilation issues
- Fix Spring Boot Actuator imports in HealthController (actuator -> actuate)
- Fix CircuitBreaker API usage by removing incorrect .values() call
- Fix TenantContextResolver method signature to include tenantId parameter
- All 35 tests now pass successfully